--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="login">Login</string>
     <string name="password">password</string>
     <string name="email">email</string>
+    <string name="logo">logo</string>
 </resources>
